--- a/.jshintrc
+++ b/.jshintrc
@@ -15,5 +15,9 @@
     "strict": true,
     "unused": true,
 
-    "loopfunc": true
+    "loopfunc": true,
+
+    "node": true,
+    "mocha": true
+    
 }
