remove uglifyjs as validator

--- a/.dbwebb-validate.config
+++ b/.dbwebb-validate.config
@@ -28,7 +28,17 @@ case "$DBW_COURSE" in
         DISABLE_PYLINT=
     ;;
 
-    javascript1 | dbjs)
+    dbjs)
+        DISABLE_HTMLHINT=
+        DISABLE_CSSLINT=
+        DISABLE_JSCS=
+        DISABLE_JSHINT=
+
+        DISABLE_HTML_MINIFIER=
+        DISABLE_CLEANCSS=
+    ;;
+
+    javascript1)
         DISABLE_HTMLHINT=
         DISABLE_CSSLINT=
         DISABLE_JSCS=
