--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: node_js
 
 node_js:
-    - "6"
-    - "5"
-    - "4"
-    - "iojs"
     - "node"
-    #- "4.1"
+    - "6"
+    - "4"
     #- "0.12"
     #- "0.11"
     #- "0.10"
@@ -24,25 +21,27 @@ git:
 
 addons:
     apt:
+        sources:
+        - debian-sid    # Grab ShellCheck from the Debian repo
         packages:
-            #- php-codesniffer
-            #- phpmd
-            #- shellcheck
+        - shellcheck
+
+
+
+env:
+    - TEST_DIR=example/nodejs/
 
 
 
 before_script:
     # Prepare for automated tests
-    - make automated-tests-prepare
+    - make install
 
 
 
 script:
-    # Check version and environment
-    - make automated-tests-check
-
     # Run tests
-    - make automated-tests-run
+    - make test
 
 
 
@@ -51,7 +50,7 @@ notifications:
 
     webhooks:
         urls:
-            - https://webhooks.gitter.im/e/2f5565acaa0b5365cc0a
+            - https://webhooks.gitter.im/e/eeddc70678354af6584f
 
         # options: [always|never|change] default: always
         on_success: change
